# rpg-game

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  ANIMATION_ARCHITECTURE.txt  ANIMATION_CODE_USAGE.md  ANIMATION_IMPLEMENTATION.md  ANIMATION_QUICK_START.md  ANIMATION_SYSTEM.md  CMakeLists.txt  README
GodotGame/: GodotGame.gdextension  enemy_unit.tscn  icon.svg.import  main.tscn  project.godot  unit.tscn
GodotGame/assets/blender-scenes/: map.blend  map.blend.import  map.blend1
cmake/: ccache.cmake  format.cmake
src/: CMakeLists.txt  animation_controller.cpp  animation_controller.hpp  attack_component.cpp  attack_component.hpp  beeper.cpp  beeper.h  health_component.cpp  health_component.hpp  input_manager.cpp  input_manager.hpp  interactable.cpp  interactable.hpp  match_manager.cpp  match_manager.hpp  moba_camera.cpp  moba_camera.hpp  movement_component.cpp  movement_component.hpp  projectile.cpp  projectile.hpp  register_types.cpp  register_types.hpp  resource_pool_component.cpp  resource_pool_component.hpp  test_movement.cpp  test_movement.hpp  unit.cpp  unit.hpp  unit_component.cpp  unit_component.hpp
templates/: CMakeLists.txt
